Site recebeu flexibilidade de cores

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           Agende sua consulta
         </a>
 
-        <img src="/assets/Foto.png" alt="mulher negra vestindo moletom verde e sorrindo" srcset="">
+        <img src="/assets/mulher-negra-sorrindo.png" alt="mulher negra vestindo moletom verde e sorrindo" srcset="">
       </div>
       <div class="stats">
         <div class="stat">
