Responsividade  para desktop pt 1/4

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a onclick="closeMenu()" href="#services">Serviços</a></li>
           <li><a onclick="closeMenu()" href="#about">Sobre</a></li>
         </ul>
-        <a href="#contact" onclick="closeMenu()" class="button">Agende sua consulta</a>
+        <a href="#contact" onclick="closeMenu()" class="button">Agendar consulta</a>
         <ul class="social-links">
           <li>
             <a target="_blank" href="https://www.instagram.com/rafaelfrodz/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
