ajustes de caminhos relativos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./assets/icon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -94,7 +94,7 @@
       </div>
 
       <div class="col-b">
-        <img src="/assets/mulher-negra-sorrindo.png" alt="mulher negra vestindo moletom verde e sorrindo" srcset="">
+        <img src="./assets/mulher-negra-sorrindo.png" alt="mulher negra vestindo moletom verde e sorrindo" srcset="">
       </div>
 
       <div class="stats">
@@ -190,7 +190,7 @@
         </div>
 
         <div class="col-b">
-           <img src="/assets/happy-doctor-holding-a-clipboard-with-patients.png" alt="Doutor feliz segurando uma prancheta com pacientes ao lado" srcset="">
+           <img src="./assets/happy-doctor-holding-a-clipboard-with-patients.png" alt="Doutor feliz segurando uma prancheta com pacientes ao lado" srcset="">
        </div>
     </div>
   </section>
@@ -225,7 +225,7 @@
         </div>
       </div>
       <div class="col-b">
-        <img src="/assets/homem-moderno-usando-smartphone-enquanto-está-no-sofá-em-casa.png" alt="homem moderno usando smartphone enquanto está no sofá em casa" srcset="">
+        <img src="./assets/homem-moderno-usando-smartphone-enquanto-está-no-sofá-em-casa.png" alt="homem moderno usando smartphone enquanto está no sofá em casa" srcset="">
       </div>
     </div>
   </section>
